# RAG_Project_Management

./: main.py  pyproject.toml
data/raw/: CSCI.csv
src/config/: init.py  settings.py
src/core/: __init__.py  models.py  text_utils.py
src/data/: __init__.py  loader.py  splitter.py
src/embeddings/: __init__.py  gemini.py
src/vectorstore/: __init__.py  chroma.py
